# capstone_orderbook

./: .clang-format  .gitignore  BID_ASK_PROCESSOR_DESIGN.md  CITATION.cff  CMakeLists.txt  GITHUB_SETUP.md  IMPLEMENTATION.md  ORDERBOOK_DESIGN_DOCUMENT.md  ORDERBOOK_VERIFICATION_VALIDATION.md  QUICK_REFERENCE.md  README.md  SIMPLIFIED_STRUCTURE.md  setup_github.sh
benchmarks/: benchmarks_ome.cpp
include/: bid_ask.h  orderbook.h
src/: bid_ask.cpp  main.cpp  orderbook.cpp
